--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "postcss": "^8.5.6",
     "react": "19.2.1",
